[package]
name = "x509-util"
version = "0.1.0"
edition = "2021"

authors = ["Luke Cycon"]
license = "Apache-2.0 OR MIT"

[dependencies]
async-trait = "0.1.75"
bumpalo-herd = "0.1.2"
chrono = "0.4.31"
const-oid = { version = "0.9.6", features = ["db", "std"] }
der = "0.7.8"
flagset = "0.4.4"
lazy_static = "1.4.0"
pkcs1 = "0.7.5"
pkcs8 = { version = "0.10.2", features = ["pem"] }
rand = "0.8.5"
sha1 = "0.10.6"
spki = { version = "0.7.3", features = ["alloc", "pem", "std"] }
thiserror = "1.0.53"
x509-cert = { version = "0.1.1", features = ["alloc", "pem", "std"] }

[dev-dependencies]
p384 = "0.13.0"
rsa = "0.9.6"
sha2 = "0.10.8"
tokio = { version = "1.35.1", features = ["rt-multi-thread", "macros"] }
