[package]
name = "x509-util"
version = "0.1.0"
edition = "2021"

authors = ["Luke Cycon"]
license = "Apache-2.0 OR MIT"

[dependencies]
async-trait = "0.1.88"
bumpalo-herd = "0.1.2"
chrono = "0.4.41"
const-oid = { version = "0.9.6", features = ["db", "std"] }
der = "0.7.10"
flagset = "0.4.7"
lazy_static = "1.5.0"
pkcs1 = "0.7.5"
pkcs8 = { version = "0.10.2", features = ["pem"] }
rand = "0.9.1"
sha1 = "0.10.6"
spki = { version = "0.7.3", features = ["alloc", "pem", "std"] }
thiserror = "2.0.12"
x509-cert = { version = "0.1.1", features = ["alloc", "pem", "std"] }

[dev-dependencies]
p384 = "0.13.1"
rsa = "0.9.8"
sha2 = "0.10.9"
tokio = { version = "1.44.2", features = ["rt-multi-thread", "macros"] }
