[package]
name = "x509"
version = "0.1.0"
edition = "2021"

[features]
default = ["rsa", "all-curves"]
all-curves = ["p256", "p384"]
ecdsa = ["dep:ecdsa"]
p256 = ["ecdsa", "dep:p256"]
p384 = ["ecdsa", "dep:p384"]
rsa = ["dep:rsa"]

[dependencies]
async-trait = "0.1.68"
chrono = "0.4.24"
clap = { version = "4.1.11", features = ["derive"] }
clap_complete = "4.1.5"
color-eyre = "0.6.2"
ecdsa = { version = "0.16.1", features = ["pem", "pkcs8"], optional = true }
lalrpop-util = "0.19.9"
p256 = { version = "0.13.0", features = ["pem"], optional = true }
p384 = { version = "0.13.0", features = ["pem"], optional = true }
pkcs8 = { version = "0.10.1", features = ["pem", "std"] }
rand_core = "0.6.4"
rsa = { version = "0.8.2", optional = true }
sha2 = { version = "0.10.6", features = ["oid"] }
spki = "0.7.0"
thiserror = "1.0.40"
tokio = { version = "1.27.0", features = ["macros", "rt-multi-thread"] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }
x509-util = { path = "../x509-util" }
xdg = "2.4.1"

[build-dependencies]
lalrpop = "0.19.8"
