[package]
name = "x509"
version = "0.1.0"
edition = "2021"

[features]
default = ["rsa", "all-curves"]
all-curves = ["p256", "p384"]
ecdsa = ["dep:ecdsa"]
p256 = ["ecdsa", "dep:p256"]
p384 = ["ecdsa", "dep:p384"]
rsa = ["dep:rsa"]

[dependencies]
async-trait = "0.1.89"
chrono = "0.4.44"
clap = { version = "4.6.1", features = ["derive"] }
clap_complete = "4.6.2"
color-eyre = "0.6.5"
ecdsa = { version = "0.16.9", features = ["pem", "pkcs8"], optional = true }
lalrpop-util = "0.20.0"
p256 = { version = "0.13.2", features = ["pem"], optional = true }
p384 = { version = "0.13.1", features = ["pem"], optional = true }
pkcs8 = { version = "0.10.2", features = ["pem", "std"] }
rand_core = "0.10.1"
rsa = { version = "0.9.10", optional = true }
sha2 = { version = "0.11.0", features = ["oid"] }
spki = "0.8.0"
thiserror = "2.0.18"
tokio = { version = "1.52.0", features = ["macros", "rt-multi-thread"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
x509-util = { path = "../x509-util" }
xdg = "3.0.0"

[build-dependencies]
lalrpop = "0.20.2"
